# iraf

./: .gitignore  .travis.yml  .version  BUILD_NOTES  BUILD_NOTES.early  CITATION.cff  COPYRIGHT  COPYRIGHTS  CREDITS.md  CREDITS_IRAF64  INSTALL  INSTALL.md  LICENCE_IRAF64  LICENSE  Makefile  README  README.UR  README.contents  README.install  README.md  README.raspberryPi  RELEASE-v2.18.1.txt  RELEASE-v2.18.txt  RELEASE.md  RELEASE.txt  bin  bin.a88k  bin.cygwin  bin.freebsd  bin.linux  bin.linuxppc  bin.linuz  bin.m68k_f68  bin.m68k_fpa  bin.macintel  bin.macos64  bin.macosx  bin.redhat  bin.sunos  bin.suse  (+10 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CFF-test.yml  citest.yml
LICENSES/: CDDL.txt  README
bin.linux/pkgconfig/: cfitsio.pc
bin.linux64/pkgconfig/: cfitsio.pc
dev/: ..pix  ..pix.imh  README  coot.fits  devices  devices.hlp  edt.ed  emacs.ed  graphcap  graphcap.inet  hostlogin  hosts  hosts.TEST  imtoolrc  irafhosts  pix.hhh  pix.imh  pix.pix  sgimc  tapecap  tapecap.ceres  tapecap.freebsd  tapecap.lepus  tapecap.linux  tapecap.solaris  tapecap.sun  tapecap.sunos  termcap  uhosts  vdm.gki  vi.ed  wpix.imh  ypix
dev/ports/: tapecap.freebsd
doc/: COPYRIGHTS  README  _doc.hd  aosvsiraf.hlp  biblio.hlp  bugs.v28  cl_log  clman.ms  clman.rst  cluser.tex  cluser_toc.ms  crib.hlp  crib_title.ms  decnet_iraf.txt  doc.hd  doc.men  dsuxiraf.ms  em4010.ms  iraf.ms  iraf92.tex  irixiraf.ms  mancl.hlp  manx.hlp  news.old.hlp  news.v29.hlp  newsfile  notes.solaris  notes.v210  notes.v211  notes.v214  notes.v25  pac_title.ms  pac_toc.hlp  packages.hlp  paspconf.sty  pkg.hlp  pkg84.hlp  pkgreorg.ms  pset.ms  rev2.txt  (+22 more)
doc/LICENSES/: README  UCAR
doc/doc/: biblio84.hlp  crib83.hlp  doc.hd  news.v28.hlp  notes.v28  spp83.hlp
doc/history/: bugs.v25  news.v212  notes.64-bit  notes.linux  notes.v210  notes.v212  notes.v23  notes.v27  notes.v29  notes_v22.st  rev1.ms  revsfile  v211revs.hlp  v212revs.hlp  v216revs.txt  v28revs.ms  v29revs.ms
doc/man/: generic.man  mkpkg.man  rpp.man  sgidispatch.man  xc.man  xpp.man  xyacc.man
doc/ports/: README  alliant_86.doc  aux_port.doc  notes.apollo.v27  notes.apollo.v28  notes.cygwin  notes.dsux  notes.freebsd  notes.i386  notes.macintel  notes.mips  notes.osf1  notes.solaris  notes_orig.hp  sun2_062486.doc  sun2_102885.doc  sun2_skyfpa.unc  sun3_042586.doc  sun3_062486.doc  sun3_f77Obugs.doc  sun_f77bugs.doc  unix.isi  vms_jan85.st  vms_oct85.st  vmsbugs.doc  vmsport.doc
doc/releases/: index.rst  v210revs.rst  v211revs.rst  v212revs.rst  v214revs.rst  v215revs.rst  v216revs.rst  v217revs.rst  v218revs.rst  v28revs.rst  v29revs.rst
include/: curl  iraf  iraf.h
iraf/: mkpkg  tags
iraf/_secret_weapons/: add_sz_val.c  check_proto.sh  count_incompatible.sh  do_add_sz_val.sh  mk_proc_list.pl
iraf/base/: clio.h  clpackage.hd  clset.h  ctotok.h  ctype.h  evexpr.h  evvexpr.h  fio.com  fio.h  gio.h  gki.h  helpdb.mip  imhdr.h  imio.h  mii.h  nullptr.com  pattern.h  plio.h  plset.h  poll.h  protect.h  psset.h  qpexset.h  root.hd  syserr.h  syshelpdir  sysruk.x  xalloc.h  yaccpar.x
iraf/dev/: devices.hlp  graphcap  graphcap.inet  memacs.ed  pix.imh  pix.pix  termcap  ypix.imh
iraf/doc/: aixiraf.ms  bsdiraf.ms  clman_toc.ms  cluser.ms  imexpr.ms  iraf92f3.eps  manx.hlp  news.old.hlp  news.v29.hlp  notes.v214  pac_toc.hlp  packages.hlp  spp_title.ms  std.ms  suniraf.hlp  template.ms  unixiraf.hlp  unixiraf.ms  unixsmg.ms  v211revs.hlp  v212revs.hlp  vmsiraf.hlp  vmsiraf.ms  vmsprog.hlp
iraf/math/: Revisions  _math.hd
iraf/noao/: mkpkg  noao.cl
iraf/pkg/: f2c_xtools.h  mkpkg
iraf/sys/: INDEX  (+15 more)
lib/: chars.h  clio.h  clset.h  diropen.h  error.h  evexpr.h  evvexpr.h  finfo.h  fio.h  fmlfstat.h  fmset.h  fset.h  gescape.h  gim.h  gio.h  gki.h  gset.h  helpdb.mip  imhdr.h  imio.h  imset.h  lexnum.h  mii.h  mwset.h  names  nmi.h  nspp.h  plio.h  plset.h  pmset.h  prc.com  printf.h  prstat.h  qpioset.h  qpset.h  root.hd  soseq.x  syserr.h  syserrmsg  syshelpdir  (+9 more)
licenses/: ATT.txt  CREDITS_IRAF64  LLSQ.txt  README
local/: .Xdefaults  .Xmodmap  .bash_logout  .bashrc  .cshrc  .dbxinit  .defaults  .emacs  .exrc  .forward  .fvwm2rc95  .gdbinit  .history  .lesshst  .login  .logout  .mailrc  .oldnewsrc  .rhosts  .rootmenu  .sunview  .termcap  .ttyswrc  .viminfo  .wmrc  .xinitrc  .xmodmaprc  .xsession-errors  COPYRIGHT  COPYRIGHTS  login.cl  mkpkg  notes.apollo.v29  notes.convex  notes.dsux  notes.dunx  notes.v210  notes.v211  notes.v212  notes.v215  (+3 more)
man/: mkpkg.man  xpp.man  xyacc.man
math/: README  Revisions  math.hd  math.men  mkpkg
noao/: README  bin.a88k  bin.cygwin  bin.f68881  bin.ffpa  bin.freebsd  bin.i386  bin.ieee  bin.linux  bin.linuxppc  bin.linuz  bin.m68k_f68  bin.m68k_fpa  bin.macintel  bin.macosx  bin.native  bin.redhat  bin.sparc  bin.sunos  bin.suse  mkpkg  noao.cl  noao.hd  noao.men  noao.par  spool
pkg/: README  mkpkg
pkg/tbtables/cfitsio/cfitsio.440/: CMakeLists.txt  Makefile  cfitsio.pc  fitsio2.h  histo.c  mkpkg  putkey.c  windumpexts.c
pkg/tbtables/cfitsio/cfitsio.440/docs/: cfitsio.ps  cfitsio.tex
pkg/tbtables/cfitsio/cfitsio.440/utilities/: speed.c
sys/: INDEX  NAMES  README  _sys.hd  mkpkg  sys.hd  sys.men
test/: README.md  ccd.md  cl.md  ecl.md  files.md  images.imcoords.md  images.imfilter.md  images.imfit.md  images.imgeom.md  images.immatch.md  images.immatch.regAndCombine.md  lists.md  noao.astutil.md  noao.digiphot.photcal.md  nttools.md  numerical-recipes.md  os.md  programming.md  run_tests  sys.vops.md  test-syntax.md  testproc.md  utilities.nttools.md
unix/: CUSTOM  Makefile  README  as  as.hurd  as.macos64  bin  mkpkg  mkpkg.sh  reboot  rmbin.sh  setarch.sh
ur/: mkpkg_patterns
util/: .repo_desc  .repo_local  .repo_manifest  .repo_pkgs  README  check_update  chk64  de_numrec  fget  iraf_latest  iraf_update  make_help  mkarch  mkbindist  mkclean  mkdist  mkproto  mksrc  mksysgen  mkup  mkupx  pkgall  pkgclean  pkgconfig  pkgdel  pkgenv  pkgget  pkginit  pkginst  pkgrepo  pkgupdate  self_update
vo/: Notes  Notes.vo  Revisions  mkpkg  vo.cl  vo.hd  vo.par
(+20354 files in other folders)
